Make sure sections align

--- a/src/components/sections/Skills/Skills.scss
+++ b/src/components/sections/Skills/Skills.scss
@@ -52,7 +52,10 @@
     }
 
     .skill-box {
-      text-align: center;
+      text-align: left;
+      @media (max-width: 744px) {
+        text-align: center;
+      }
 
       ul {
         color: #fff;
